--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 									
 									<h2><a href="#">My Name is <br/>Shantanu Nandargi
 									</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<p>Analysis of Configurator CR data<br />
+									to reduce the amount of rework and loss of time<br />
+									instead, this analysis provides the Most frequent CRs overall to push a release delivery  </p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/Frequent Customer Change Rquests.jpeg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">Check it Out</a></li>
 								</ul>
