--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">Project 1</a></h2>
+										<h2><a href="#">Spend Forecast Tool</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/SU Spend Forecast Tool.png" alt="" /></a>
+									<p>The Current Forecast Tool had flaws and frequent errors in the forecast would deviate from budget hence this tool overcomes those Short comings.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
