--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1> Portfolio </h1>
+						<h1> Hi! </h1>
+						<h1>My name is SHantanu Nandargi</h1>
 						<p>Hi! This page showcases the projects and abilites by <a href="https://www.linkedin.com/in/shantanu-n/">@Shantanu</a> 
 						</p>
 						<ul class="actions">
@@ -50,7 +51,7 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="#">My Name is <br/>Shantanu Nandargi
+									<h2><a href="#"> Data Modeling of <br/> Customer Change Request tickets 
 									</a></h2>
 									<p>Analysis of Configurator CR data<br />
 									to reduce the amount of rework and loss of time<br />
