--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1> Hi! </h1>
 						<h1>My name is SHantanu Nandargi</h1>
-						<p>Hi! This page showcases the projects and abilites by <a href="https://www.linkedin.com/in/shantanu-n/">@Shantanu</a> 
+						<p>This page showcases the projects and abilites by <a href="https://www.linkedin.com/in/shantanu-n/">@Shantanu</a> 
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
