--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<li class="active"><a href="index.html">Projects</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.linkedin.com/in/shantanu-n/" class="icon brands fa-linkedin"></a></li>
 							
 						</ul>
 					</nav>
@@ -104,12 +104,12 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">nandargi.de@gmail.com</a></p>
+								<p><a href="nandargi.de@gmail.com">nandargi.de@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.linkedin.com/in/shantanu-n/" class="icon brands alt fa-linkedin"><span class="label">Twitter</span></a></li>
 									
 								</ul>
 							</section>
