--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Shantanu Nandargi</title>
+		<title>SN Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,8 +19,8 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1> Hi! </h1>
-						<h1>My name is SHantanu Nandargi</h1>
+						<h1> Hi! </h1> <br/>
+						<h1>my name is Shantanu Nandargi</h1>
 						<p>This page showcases the projects and abilites by <a href="https://www.linkedin.com/in/shantanu-n/">@Shantanu</a> 
 						</p>
 						<ul class="actions">
@@ -31,6 +31,9 @@
 				<!-- Header -->
 					<header id="header">
 						<a href="index.html" class="logo">Projects</a>
+					</header>
+				<header id="header">
+						<a href="index.html" class="logo">Resume</a>
 					</header>
 
 				<!-- Nav -->
