--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 					<div id="intro">
 						<h1> Hi! </h1> <br/>
 						<h1>my name is Shantanu Nandargi</h1>
-						<p>This page showcases the projects and abilites by <a href="https://www.linkedin.com/in/shantanu-n/">me</a> 
+						<p>This page showcases the projects and abilites by <a href="https://www.linkedin.com/in/shantanu-n/">me</a>
+					</br> (Page is Still in Progress)
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
