--- a/index.html
+++ b/index.html
@@ -90,6 +90,18 @@
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										
+										<h2><a href="#">Financial Modelling of a Warehouse</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/Financial modelling of a warehouse .png" alt="" /></a>
+									<p>Financial modeling of a warehouse involves creating a detailed representation of the financial performance and projections for the warehouse facility. 
+										It helps in assessing its Budget, Spending, Savings, and optimal utilization of resources. </p>
+									<ul class="actions special">
+										<li><a href="#" class="button">Full Story</a></li>
+									</ul>
+								</article>
 							</section>
 								
 
